--- a/index.html
+++ b/index.html
@@ -84,10 +84,6 @@
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
-		  a1{
-			text-shadow: 2px 2px 2px red;
-			  font: 250%;
-		   }
 		
 		/*Menus*/
 		  .menu1{
@@ -117,13 +113,13 @@
 <body>    
 	<nav class="blue-grey darken-3 nav_imatge" >
 		    <div class="nav-wrapper">
-		      <a1 href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a1>
+		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-			<li id="item1" class="item"><a1 href="demon's_souls.html"> Demon Souls </a1></li>
-			<li id="item2" class="item"><a1 href="dark_souls.html"> Dark Souls </a1></li>
-			<li id="item3" class="item"><a1 href="dark_souls_ii.html"> Dark Souls II </a1></li>
-		        <li id="item4" class="item"><a1 href="dark_souls_iii.html"> Dark Souls III </a1></li>
-			<li id="item5" class="item"><a1 href="bloodborne.html"> Bloodborne </a1></li>
+			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
+			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
+			<li id="item3" class="item"><a href="dark_souls_ii.html"> Dark Souls II </a></li>
+		        <li id="item4" class="item"><a href="dark_souls_iii.html"> Dark Souls III </a></li>
+			<li id="item5" class="item"><a href="bloodborne.html"> Bloodborne </a></li>
 		      </ul>
 		    </div>
 		  </nav>
@@ -205,6 +201,7 @@
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Esta Es Tu Guía: Doritos Souls</h3>
+				  <h3>                              </h3>
 				</div>      
 			  </div>
 
@@ -212,6 +209,7 @@
 				<img src="image/ringedcity.jpg" alt="Guias" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Nuevas Guías</h3>
+				  <h4>            </h4>
 				</div>      
 			  </div>
 			
@@ -219,6 +217,7 @@
 				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Mantenimiento</h3>
+				  <h4>             </h4>
 				</div>      
 			  </div>
 			</div>
