--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 	 	
 		 <div class="col s12 m2">
 			 <h1 class="z-depth-5">Demon's Souls</h1>
-			 <h2>Armas</h2>
+			 <h2 class="z-depth-5">Armas</h2>
 			 <p> Dagas            </p>
 			 <p> Espadas rectas   </p>
 			 <p> Espadas curvas   </p>
@@ -275,13 +275,13 @@
 			 <p> Látigos          </p>
 			 <p> Llama de piroma. </p>
 			 
-			 <h2>Magias</h2>
+			 <h2 class="z-depth-5">Magias</h2>
 			 <p> Hechizos         </p>
 			 <p> Milagros         </p>
 			 <p> Maleficios       </p>
 			 <p> Piromancias      </p>
 			 
-			 <h2>Armaduras</h2>
+			 <h2 class="z-depth-5">Armaduras</h2>
 			 <p> Cabeza           </p>
 			 <p> Torso            </p>
 			 <p> Manos            </p>
