--- a/index.html
+++ b/index.html
@@ -246,21 +246,21 @@
 		</div>	  
 	 	
 		 <div class="col s12 m2">
-			 <h1 class="z-depth-5">Demon's Souls</h1>
-			 <h2 class="z-depth-5">Armas</h2>
-			 <p class="z-depth-5"> Dagas            </p>
-			 <p class="z-depth-5"> Espadas rectas   </p>
-			 <p class="z-depth-5"> Espadas curvas   </p>
-			 <p class="z-depth-5">Estoques         </p>
-			 <p class="z-depth-5"> Espadones        </p>
-			 <p class="z-depth-5"> Espadones Curvos </p>
-			 <p class="z-depth-5"> Ultra Espadones  </p>
-			 <p class="z-depth-5"> Katanas          </p>
-			 <p class="z-depth-5"> Hachas           </p>
-			 <p class="z-depth-5"> Grandes hachas   </p>
-			 <p class="z-depth-5"> Lanzas           </p>
-			 <p class="z-depth-5"> Alabardas        </p>
-			 <p class="z-depth-5"> Martillos/Pica   </p>
+			 <h1 class="z-depth-5 red accent-3">Demon's Souls</h1>
+			 <h2>Armas</h2>
+			 <p> Dagas            </p>
+			 <p> Espadas rectas   </p>
+			 <p> Espadas curvas   </p>
+			 <p>Estoques         </p>
+			 <p> Espadones        </p>
+			 <p> Espadones Curvos </p>
+			 <p> Ultra Espadones  </p>
+			 <p> Katanas          </p>
+			 <p> Hachas           </p>
+			 <p> Grandes hachas   </p>
+			 <p> Lanzas           </p>
+			 <p> Alabardas        </p>
+			 <p> Martillos/Pica   </p>
 			 <p> Grandes Martillos</p>
 			 <p> Guadañas         </p>
 			 <p> Garras           </p>
