--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 			<h3 class="col-md-12 green accent-2">Títol</h3>
 		</div>	  
 	 	
-		 <div class="col s12 m2">
+		 <div class="list-group col s12 m2">
 			 <h1 class="z-depth-5 red accent-3">Demon's Souls</h1>
-			 <h2>Armas</h2>
-			 <p> Dagas            </p>
-			 <p> Espadas rectas   </p>
-			 <p> Espadas curvas   </p>
+			 <h2> Armas </h2>
+			 <p href="#" class="list-group-item active"> Dagas            </p>
+			 <p href="#" class="list-group-item active"> Espadas rectas   </p>
+			 <p href="#" class="list-group-item active"> Espadas curvas   </p>
 			 <p>Estoques         </p>
 			 <p> Espadones        </p>
 			 <p> Espadones Curvos </p>
