--- a/index.html
+++ b/index.html
@@ -245,18 +245,19 @@
 			<h3 class="col-md-12 green accent-2">Títol</h3>
 		</div>	  
 	 	
-		 <div class="list-group col s12 m2">
-			 <h1 class="z-depth-5 red accent-3">Demon's Souls</h1>
-			 <h2> Armas </h2>
-			 <p href="#" class="list-group-item active"> Dagas            </p>
-			 <p href="#" class="list-group-item active"> Espadas rectas   </p>
-			 <p href="#" class="list-group-item active"> Espadas curvas   </p>
-			 <p>Estoques         </p>
-			 <p> Espadones        </p>
-			 <p> Espadones Curvos </p>
-			 <p> Ultra Espadones  </p>
-			 <p> Katanas          </p>
-			 <p> Hachas           </p>
+		 <div class="dropdown col s12 m2">
+			 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
+			  <span class="caret"></span></button>
+			  <ul class="dropdown-menu">
+			 <li><p> Dagas            </p></li>
+			 <li><p> Espadas rectas   </p></li>
+			 <li><p> Espadas curvas   </p></li>
+			 <li><p> Estoques         </p></li>
+			 <li><p> Espadones        </p></li>
+			 <li><p> Espadones Curvos </p></li>
+			 <li><p> Ultra Espadones  </p></li>
+			 <li><p> Katanas          </p></li>
+			 <li><p> Hachas           </p></li>
 			 <p> Grandes hachas   </p>
 			 <p> Lanzas           </p>
 			 <p> Alabardas        </p>
