--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
 		</div>	  
 	 	
 		 <div class="dropdown col s12 m2">
-			 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
-			  <span class="caret"></span></button>
-			  <ul class="dropdown-menu">
+		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
+		   <span class="caret"></span></button>
+		  <ul class="dropdown-menu">
 			 <li><p> Dagas            </p></li>
 			 <li><p> Espadas rectas   </p></li>
 			 <li><p> Espadas curvas   </p></li>
@@ -258,24 +258,25 @@
 			 <li><p> Ultra Espadones  </p></li>
 			 <li><p> Katanas          </p></li>
 			 <li><p> Hachas           </p></li>
-			 <p> Grandes hachas   </p>
-			 <p> Lanzas           </p>
-			 <p> Alabardas        </p>
-			 <p> Martillos/Pica   </p>
-			 <p> Grandes Martillos</p>
-			 <p> Guadañas         </p>
-			 <p> Garras           </p>
-			 <p> Guantes          </p>
-			 <p> Antorcha         </p>
-			 <p> Ballestas        </p>
-			 <p> Arcos            </p>
-			 <p> Arcos grandes    </p>
-			 <p> Campanas         </p>
-			 <p> Talismanes       </p>
-			 <p> Bastones         </p>
-			 <p> Látigos          </p>
-			 <p> Llama de piroma. </p>
-			 
+			 <li><p> Grandes hachas   </p></li>
+			 <li><p> Lanzas           </p></li>
+			 <li><p> Alabardas        </p></li>
+			 <li><p> Martillos/Pica   </p></li>
+			 <li><p> Grandes Martillos</p></li>
+			 <li><p> Guadañas         </p></li>
+			 <li><p> Garras           </p></li>
+			 <li><p> Guantes          </p></li>
+			 <li><p> Antorcha         </p></li>
+			 <li><p> Ballestas        </p></li>
+			 <li><p> Arcos            </p></li>
+			 <li><p> Arcos grandes    </p></li>
+			 <li><p> Campanas         </p></li>
+			 <li><p> Talismanes       </p></li>
+			 <li><p> Bastones         </p></li>
+			 <li><p> Látigos          </p></li>
+			 <li><p> Llama de piroma. </p></li>
+		   </ul>
+	          </div>
 			 <h2 class="z-depth-5">Magias</h2>
 			 <p> Hechizos         </p>
 			 <p> Milagros         </p>
