--- a/index.html
+++ b/index.html
@@ -249,32 +249,19 @@
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
 		   <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-			 <li><p> Dagas            </p></li>
-			 <li><p> Espadas rectas   </p></li>
-			 <li><p> Espadas curvas   </p></li>
-			 <li><p> Estoques         </p></li>
-			 <li><p> Espadones        </p></li>
-			 <li><p> Espadones Curvos </p></li>
-			 <li><p> Ultra Espadones  </p></li>
-			 <li><p> Katanas          </p></li>
-			 <li><p> Hachas           </p></li>
-			 <li><p> Grandes hachas   </p></li>
-			 <li><p> Lanzas           </p></li>
-			 <li><p> Alabardas        </p></li>
-			 <li><p> Martillos/Pica   </p></li>
-			 <li><p> Grandes Martillos</p></li>
-			 <li><p> Guadañas         </p></li>
-			 <li><p> Garras           </p></li>
-			 <li><p> Guantes          </p></li>
-			 <li><p> Antorcha         </p></li>
-			 <li><p> Ballestas        </p></li>
-			 <li><p> Arcos            </p></li>
-			 <li><p> Arcos grandes    </p></li>
-			 <li><p> Campanas         </p></li>
-			 <li><p> Talismanes       </p></li>
-			 <li><p> Bastones         </p></li>
-			 <li><p> Látigos          </p></li>
-			 <li><p> Llama de piroma. </p></li>
+			 <li><p> Dagas            </p></li> <li><p> Grandes Martillos</p></li>
+			 <li><p> Espadas rectas   </p></li> <li><p> Guadañas         </p></li>
+			 <li><p> Espadas curvas   </p></li> <li><p> Garras           </p></li>
+			 <li><p> Estoques         </p></li> <li><p> Guantes          </p></li>
+			 <li><p> Espadones        </p></li> <li><p> Antorcha         </p></li>
+			 <li><p> Espadones Curvos </p></li> <li><p> Ballestas        </p></li>
+			 <li><p> Ultra Espadones  </p></li> <li><p> Arcos            </p></li>
+			 <li><p> Katanas          </p></li> <li><p> Arcos grandes    </p></li>
+			 <li><p> Hachas           </p></li> <li><p> Campanas         </p></li>
+			 <li><p> Grandes hachas   </p></li> <li><p> Talismanes       </p></li>
+			 <li><p> Lanzas           </p></li> <li><p> Bastones         </p></li>
+			 <li><p> Alabardas        </p></li> <li><p> Látigos          </p></li>
+			 <li><p> Martillos/Pica   </p></li> <li><p> Llama de piroma. </p></li>
 		   </ul>
 	          </div>
 	
