--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
 		</div>
 	
 		<div class="row">
-			<h3 class="col-md-12 green accent-2">Títol</h3>
-		</div>	  
+			<h3 class="col-md-12 green accent-2">Demon Souls</h3>  
 	 	
 		 <div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
@@ -310,6 +309,7 @@
 			  <p> oaiwdyhoaw8uh </p>
 		   </ul>
 	          </div>
+		</div>
 </body>
 
 </html>
