--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		</div>
 	
 		<div class="row">
-			<h3 class="col-md-12 green accent-2">Demon Souls</h3>  
+			<h5 class="z-depth-5 red accent-3">Demon Souls</h5>  
 	 	
 		 <div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
