--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
+		  h5{
+			  text-shadow: 2px 2px 2px red;
+			  font-family: 300% condensed;
+			  text-align: center;
+		}
 		
 		/*Menus*/
 		  .menu1{
