--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		</div>
 	
 		<div class="row">
-			<h5 class="z-depth-5 red accent-3">Demon Souls</h5>  
+			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
 	 	
 		 <div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
