--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		   }
 		  h5{
 			  text-shadow: 2px 2px 2px red;
-			  font-family: 300% condensed;
+			  font-family: 300% condensed cyan;
 			  text-align: center;
 		}
 		
