--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@
 			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
 	 	
 		 <div class="dropdown col s12 m2">
-		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Armas
-		   <span class="caret"></span></button>
-		  <ul class="dropdown-menu">
+		   <div class="collapsible-header"><i class="material-icons">filter_drama</i>Armas</div>
+      			<div class="collapsible-body"><span>
 			 <li><p> Dagas            </p></li> <li><p> Grandes Martillos</p></li>
 			 <li><p> Espadas rectas   </p></li> <li><p> Guadañas         </p></li>
 			 <li><p> Espadas curvas   </p></li> <li><p> Garras           </p></li>
@@ -266,8 +265,7 @@
 			 <li><p> Lanzas           </p></li> <li><p> Bastones         </p></li>
 			 <li><p> Alabardas        </p></li> <li><p> Látigos          </p></li>
 			 <li><p> Martillos/Pica   </p></li> <li><p> Llama de piroma. </p></li>
-		   </ul>
-	          </div>
+          </span></div>
 	
 		<div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Magias
