--- a/index.html
+++ b/index.html
@@ -248,10 +248,11 @@
 	
 		<div class="row">
 			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
-	 	
-		 <div class="dropdown col s12 m2">
-		   <div class="collapsible-header"><i class="material-icons">filter_drama</i>Armas</div>
-      			<div class="collapsible-body"><span>
+			
+      <div class="collapsible-body"><ul class="collapsible" data-collapsible="accordion">
+    	<li>
+      <div class="collapsible-header"><i class="material-icons">uohu</i>First</div>
+      <div class="collapsible-body"><span>
 			 <li><p> Dagas            </p></li> <li><p> Grandes Martillos</p></li>
 			 <li><p> Espadas rectas   </p></li> <li><p> Guadañas         </p></li>
 			 <li><p> Espadas curvas   </p></li> <li><p> Garras           </p></li>
