--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			
       <div class="collapsible-body"><ul class="collapsible" data-collapsible="accordion">
     	<li>
-      <div class="collapsible-header"><i class="material-icons">uohu</i>First</div>
+      <div class="collapsible-header"><i class="material-icons">games</i>Armas</div>
       <div class="collapsible-body"><span>
 			 <li><p> Dagas            </p></li> <li><p> Grandes Martillos</p></li>
 			 <li><p> Espadas rectas   </p></li> <li><p> Guadañas         </p></li>
