--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			
       <div class="collapsible-body"><ul class="collapsible" data-collapsible="accordion">
     	<li>
-      <div class="collapsible-header"><i class="material-icons">games</i>Armas</div>
+      <div class="collapsible-header">Armas</div>
       <div class="collapsible-body"><span>
 			 <li><p> Dagas            </p></li> <li><p> Grandes Martillos</p></li>
 			 <li><p> Espadas rectas   </p></li> <li><p> Guadañas         </p></li>
@@ -267,6 +267,7 @@
 			 <li><p> Alabardas        </p></li> <li><p> Látigos          </p></li>
 			 <li><p> Martillos/Pica   </p></li> <li><p> Llama de piroma. </p></li>
           </span></div>
+		<!--
 	
 		<div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Magias
@@ -313,6 +314,7 @@
 			  <p> oaiwdyhoaw8uh </p>
 		   </ul>
 	          </div>
+		-->
 		</div>
 </body>
 
