--- a/index.html
+++ b/index.html
@@ -248,7 +248,28 @@
 	
 		<div class="row">
 			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
+	
+			<ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+  </ul>
 			
+			
+			
+			
+			
+			
+			<!--
       <div class="collapsible-body"><ul class="collapsible" data-collapsible="accordion">
     	<li>
       <div class="collapsible-header">Armas</div>
@@ -267,7 +288,7 @@
 			 <li><p> Alabardas        </p></li> <li><p> Látigos          </p></li>
 			 <li><p> Martillos/Pica   </p></li> <li><p> Llama de piroma. </p></li>
           </span></div>
-		<!--
+		
 	
 		<div class="dropdown col s12 m2">
 		   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Magias
