--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
 			<ul class="collapsible" data-collapsible="accordion">
     <li>
       <div class="collapsible-header">First</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-body"><span>
+	      <p>Dagas</p>
+	      <p>Espadas rectas</p>
+	      <p>Espadas curvas</p>
+	      </span></div>
     </li>
     <li>
       <div class="collapsible-header">Second</div>
