--- a/index.html
+++ b/index.html
@@ -253,9 +253,19 @@
     <li>
       <div class="collapsible-header">First</div>
       <div class="collapsible-body"><span>
-	      <p>Dagas</p>
-	      <p>Espadas rectas</p>
+	      <p>Dagas</p>          <p>Grandes Martillos</p>
+	      <p>Espadas rectas</p> <p>Guadañas</p>
 	      <p>Espadas curvas</p>
+	      <p>Estoques</p>
+	      <p>Espadones</p>
+	      <p>Espadones Curvos</p>
+	      <p>Ultra Espadones</p>
+	      <p>Katanas</p>
+	      <p>Hachas</p>
+	      <p>Grandes hachas</p>
+	      <p>Lanzas</p>
+	      <p>Alabardas</p>
+	      <p>Martillos/Pica</p>
 	      </span></div>
     </li>
     <li>
