--- a/index.html
+++ b/index.html
@@ -253,19 +253,21 @@
     <li>
       <div class="collapsible-header">First</div>
       <div class="collapsible-body"><span>
-	      <p>Dagas</p>          <p>Grandes Martillos</p>
-	      <p>Espadas rectas</p> <p>Guadañas</p>
-	      <p>Espadas curvas</p>
-	      <p>Estoques</p>
-	      <p>Espadones</p>
-	      <p>Espadones Curvos</p>
-	      <p>Ultra Espadones</p>
-	      <p>Katanas</p>
-	      <p>Hachas</p>
-	      <p>Grandes hachas</p>
-	      <p>Lanzas</p>
-	      <p>Alabardas</p>
-	      <p>Martillos/Pica</p>
+	      <p href="dagas.html">Dagas</p>          
+	      <p href="espadas_rectas.html">Espadas rectas</p> 
+	      <p href="espadas_curvas.html">Espadas curvas</p>
+	      <p href="estoques.html">Estoques</p>
+	      <p href="espadones.html">Espadones</p>
+	      <p href="espadones_curvos.html">Espadones Curvos</p>
+	      <p href="ultra_espadones.html">Ultra Espadones</p>
+	      <p href="katanas.html">Katanas</p>
+	      <p href="hachas.html">Hachas</p>
+	      <p href="grandes_hachas.html">Grandes hachas</p>
+	      <p href="lanzas.html">Lanzas</p>
+	      <p href="alabardas.html">Alabardas</p>
+	      <p href="martillos_pica.html">Martillos/Pica</p>
+	      <p href="grandes_martillos.html">Grandes Martillos</p>
+	      <p href="guadañas.html">Guadañas</p>
 	      </span></div>
     </li>
     <li>
