--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@
     <li>
       <div class="collapsible-header">First</div>
       <div class="collapsible-body"><span>
-	      <p href="dagas.html">Dagas</p>          
-	      <p href="espadas_rectas.html">Espadas rectas</p> 
-	      <p href="espadas_curvas.html">Espadas curvas</p>
-	      <p href="estoques.html">Estoques</p>
-	      <p href="espadones.html">Espadones</p>
-	      <p href="espadones_curvos.html">Espadones Curvos</p>
-	      <p href="ultra_espadones.html">Ultra Espadones</p>
-	      <p href="katanas.html">Katanas</p>
-	      <p href="hachas.html">Hachas</p>
-	      <p href="grandes_hachas.html">Grandes hachas</p>
-	      <p href="lanzas.html">Lanzas</p>
-	      <p href="alabardas.html">Alabardas</p>
-	      <p href="martillos_pica.html">Martillos/Pica</p>
-	      <p href="grandes_martillos.html">Grandes Martillos</p>
-	      <p href="guadañas.html">Guadañas</p>
+	      <a href="dagas.html">Dagas</a>          
+	      <a href="espadas_rectas.html">Espadas rectas</a> 
+	      <a href="espadas_curvas.html">Espadas curvas</a>
+	      <a href="estoques.html">Estoques</a>
+	      <a href="espadones.html">Espadones</a>
+	      <a href="espadones_curvos.html">Espadones Curvos</a>
+	      <a href="ultra_espadones.html">Ultra Espadones</a>
+	      <a href="katanas.html">Katanas</a>
+	      <a href="hachas.html">Hachas</a>
+	      <a href="grandes_hachas.html">Grandes hachas</a>
+	      <a href="lanzas.html">Lanzas</a>
+	      <a href="alabardas.html">Alabardas</a>
+	      <a href="martillos_pica.html">Martillos/Pica</a>
+	      <a href="grandes_martillos.html">Grandes Martillos</a>
+	      <a href="guadañas.html">Guadañas</a>
 	      </span></div>
     </li>
     <li>
