--- a/index.html
+++ b/index.html
@@ -289,15 +289,58 @@
 	      		<a>Espadones curvos de jefes</a>
 		</span></div>
 	      
-	      <a>Ultra Espadones</a>
-	      <a>Katanas</a>
-	      <a>Hachas</a>
-	      <a>Grandes hachas</a>
-	      <a>Lanzas</a>
-	      <a>Alabardas</a>
-	      <a>Martillos/Pica</a>
-	      <a>Grandes Martillos</a>
-	      <a>Guadañas</a>
+		<div class="collapsible-header">Ultra Espadones</div>
+      		<div class="collapsible-body"><span>
+	      		<a>Ultra espadones</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Katanas</div>
+      		<div class="collapsible-body"><span>
+	      		<a>Katanas</a>
+		</span></div>
+			
+		
+		<div class="collapsible-header">Hachas</div>
+      		<div class="collapsible-body"><span>
+	      		<a>Hachas</a>
+			
+			
+		<div class="collapsible-header">Grandes Hachas</div>
+      		<div class="collapsible-body"><span>
+	     		 <a>Grandes hachas</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Lanzas</div>
+      		<div class="collapsible-body"><span>
+	     		 <a>Lanzas</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Alabardas</div>
+      		<div class="collapsible-body"><span>
+      			<a>Alabardas</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Martillos/Pica</div>
+      		<div class="collapsible-body"><span>
+	      		<a>Martillos/Pica</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Grandes Martillos</div>
+      		<div class="collapsible-body"><span>
+	      		<a>Grandes martillos</a>
+		</span></div>
+			
+			
+		<div class="collapsible-header">Guadañas</div>
+      		<div class="collapsible-body"><span>
+			<a>Guadañas</a>
+		</span></div>
+			
 	      </span></div>
     </li>
     <li>
