--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -29,7 +29,31 @@
     <script src="js/materialize.js"></script>	
 	
 	<style>
-		  .container {
+		/*
+		<!--carousel-->
+		.carousel{
+		   display:table;
+		   width:100%;
+		}
+		.carousel-content {
+		    color:black;
+		    position:relative;
+			width:inherit;
+			text-align:center;  
+		    height:200px;
+		    display:block;
+		}
+
+		.carousel-content div{
+		   margin-top:50%;
+		   transform:translateY(-50%);
+
+		}
+		.carousel-content h3{
+		  margin-top: 0;
+		}
+		
+		.container {
 			  padding: 80px 120px;
 		  }
 		  .person {
@@ -40,29 +64,53 @@
 			  opacity: 0.7;
 		  }
 		  .person:hover {
-		  border-color: #f1f1f1;
+			  border-color: #f1f1f1;
 		  }
 		  .bg-25 { 
-			background-color: #403E26; /* Color */
+			background-color: #403E26; <!--Color-->
 			color: #ffffff;
 			  opacity: 0.7;
-		   }	  
+		   }
+		*/
+		
+		/*letra*/
+	          h3{
+			text-shadow: 2px 2px 2px yellow;
+			font-family: 500% fantasy;
+			text-align:center;	  
+		   }
+		  h4{
+			text-shadow: 2px 2px 2px yellow;
+			font-family: 300% fantasy;
+			text-align:center;
+		   }
+		  h5{
+			  text-shadow: 2px 2px 2px red;
+			  font-family: 300% condensed cyan;
+			  text-align: center;
+		}
+		
+		/*Menus*/
 		  .menu1{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/shieldboss.gif");
 		    }
 		  .menu2{
-		  	background-image: url("image/ringedcity.jpg");  
+		  	background-image: url("image/caballerocebolla.gif");  
 		    }
 		   .menu3{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/mirrorboss.gif");  
 		    }
 		   .menu4{
-			background-image: url("image/ringedcity.jpg");  
-		    }
+			background-image: url("image/lothric_wall.gif");
+		   }
 	       	   .menu5{
-			background-image: url("image/knight.jpg");  
+			background-image: url("image/clericbeast.gif");
 		    }
-		  
+		
+		    .nav_imatge{
+			background-image: url("image/ringoffire.jpg");  
+		    }
+
 	</style>
  
 </head>
