--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
 						</li>
 
 					  </ul>
-			
+						 
+						 
+				       <ul class="collapsible" data-collapsible="accordion">
 			    <li>
 			      <div class="collapsible-header">Second</div>
 			      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
