--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
 						 
 				       <ul class="collapsible" data-collapsible="accordion">
 			    <li>
-			      <div class="collapsible-header">Second</div>
-			      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+			      <div class="collapsible-header">Magias</div>
+			      <div class="collapsible-body"><span>Hechizos</span></div>
 			   </li>
 			   
 			
