--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -354,7 +354,7 @@
 								<br>
 							</span></div>
 						 </li></ul>
-
+				       </span></ul>
 			   <!-- Armaduras -->
 				<ul class="collapsible" data-collapsible="accordion">
 
@@ -403,7 +403,7 @@
 								</span></div>
 							 </li></ul>
 				    
-			  </ul>
+					       </span></ul>
 	
 	
 
