--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -131,7 +131,7 @@
 	
 	
 		<div class="row">
-			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
+			<h5 class="z-depth-5 indigo darken-4">Demon's Souls</h5>  
 	                
 			 <!-- Armas -->
 			<ul class="collapsible" data-collapsible="accordion">
