--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -403,12 +403,7 @@
 								</span></div>
 							 </li></ul>
 				    
-					       </span>
-				</ul>
-			</ul>
-</ul>
-	
-	
+					       </span></ul>
 
 		<!-- Menu Toggle Script -->
 		<script>
