--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -305,7 +305,7 @@
 								<br>
 							</span></div>
 						</li></ul>
-				       </span>
+				       </span></ul>
 						 
 		 	<!-- Magias -->
 				    <ul class="collapsible" data-collapsible="accordion">
@@ -354,7 +354,7 @@
 								<br>
 							</span></div>
 						 </li></ul>
-				       </span>
+				       </span></ul>
 			   <!-- Armaduras -->
 				<ul class="collapsible" data-collapsible="accordion">
 
