--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -129,9 +129,9 @@
 		    </div>
 		  </nav>
 	
-	
+	<!-- Contenidos -->
 		<div class="row">
-			<h5 class="z-depth-5 indigo darken-4">Demon Souls</h5>  
+			<h6 class="z-depth-5 indigo darken-4">Demon Souls</h6>  
 	                
 			 <!-- Armas -->
 			<ul class="collapsible" data-collapsible="accordion">
