--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -131,7 +131,7 @@
 	
 	<!-- Contenidos -->
 		<div class="row">
-			<h6 class="z-depth-5 indigo darken-4">Demon Souls</h6>  
+			<h class="z-depth-5 indigo darken-4">Demon Souls</h>  
 	                
 			 <!-- Armas -->
 			<ul class="collapsible" data-collapsible="accordion">
