--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -712,6 +712,21 @@
 							 </li></ul>
 				    
 					       </span></ul>
+					    
+					  <!-- Images -->
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="http://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <p>El Nexo</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+</div>
 
 		<!-- Menu Toggle Script -->
 		<script>
