--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -720,10 +720,12 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-          <p>El Nexo</p>
+          <p>El Nexus es un templo oculto que esta "unido a la tierra del norte de Boletaria". 
+	     Atrapa las almas de los futuros cazadores de demonios de modo que no pueden escapar, 
+	     pudiendo únicamente viajar a través de los 5 mundos conectados por las "Archstones".</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#">El nexo</a>
         </div>
       </div>
 </div>
