--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -716,7 +716,7 @@
 					  <!-- Images -->
     <div class="card horizontal">
       <div class="card-image">
-        <img src="http://lorempixel.com/100/190/nature/6">
+        <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-content">
