--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -727,7 +727,7 @@
 	     pudiendo únicamente viajar a través de los 5 mundos conectados por las "Archstones".</p>
         </div>
         <div class="card-action">
-          <a href="#">El nexo</a>
+	<p><a href="#">El nexo</a></p>
         </div>
       </div>
 </div>
