--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -780,7 +780,7 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-          <p> </p>
+          <p> dwadawdwd </p>
         </div>
         <div class="card-action">
 	<p><a href="#">Altar de las tormentas</a></p>
