--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -738,7 +738,7 @@
       </div>
       <div class="card-stacked">
         <div class="card-content">
-          <p>Boletaria es un mundo habitado mayormente por soldados humanos de diferente equipamiento y habilidades.</p>
+          <p>Boletaria es un mundo habitado mayormente por soldados humanos de diferente equipamiento y habilidades.2</p>
         </div>
         <div class="card-action">
 	<p><a href="#">Palacio de Boletaria</a></p>
