--- a/dark_souls_ii.html
+++ b/dark_souls_ii.html
@@ -82,18 +82,22 @@
 		  </nav>
 		  	
 			
-		  <div class="col s12 m7">
+  <div class="col s12 m7">
     <h2 class="header">Horizontal Card</h2>
     <div class="card horizontal">
       <div class="card-image">
-        <img src="http://lorempixel.com/100/190/nature/6">
+        <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
+          <p>El Nexo es un templo oculto que esta "unido a la tierra del norte de Boletaria".
+	     <br>
+	     Atrapa las almas de los futuros cazadores de demonios de modo que no pueden escapar,
+	     <br>
+	     pudiendo únicamente viajar a través de los 5 mundos conectados por las "Archstones".</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#">El nexo</a>
         </div>
       </div>
     </div>
