--- a/dark_souls_ii.html
+++ b/dark_souls_ii.html
@@ -83,7 +83,7 @@
 		  	
 			
   <div class="col s12 m7">
-    <h2 class="header">Horizontal Card</h2>
+    <h2 class="header">Zonas</h2>
     <div class="card horizontal">
       <div class="card-image">
         <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg">
