--- a/demon's_souls.html
+++ b/demon's_souls.html
@@ -714,7 +714,9 @@
 					       </span></ul>
 					    
 					  <!-- Images -->
-    <div class="card">
+  <div class="col s12 m7">
+    <h2 class="header">Zonas</h2>
+    <div class="card horizontal">
       <div class="card-image">
         <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg">
       </div>
@@ -727,12 +729,13 @@
 	     pudiendo únicamente viajar a través de los 5 mundos conectados por las "Archstones".</p>
         </div>
         <div class="card-action">
-	<p><a href="#">El nexo</a></p>
+          <a href="#">El nexo</a>
         </div>
       </div>
-</div>
+    </div>
+  </div>
 					    
-    <div class="card medium">
+    <div class="card">
       <div class="card-image">
         <img src="https://frikadasmil.files.wordpress.com/2012/02/demon1.jpg">
       </div>
