--- a/dark_souls_ii.html
+++ b/dark_souls_ii.html
@@ -84,7 +84,7 @@
 			
     <div class="card horizontal">
       <div class="card-image">
-        <img width="800" src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg">
+        <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg" width="320" height="180">
       </div>
       <div class="card-stacked">
         <div class="card-content">
