--- a/dark_souls_ii.html
+++ b/dark_souls_ii.html
@@ -79,9 +79,9 @@
 			<li id="item5" class="item"><a href="bloodborne.html"> Bloodborne</a></li>
 		      </ul>
 		    </div>
-		  </nav>
+     </nav>
 		  	
-			
+    <div class="col s12 m7">			
     <div class="card horizontal">
       <div class="card-image">
         <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg" width="320" height="180">
@@ -102,7 +102,7 @@
     
     <div class="card horizontal">
       <div class="card-image">
-        <img src="https://frikadasmil.files.wordpress.com/2012/02/demon1.jpg">
+        <img src="https://frikadasmil.files.wordpress.com/2012/02/demon1.jpg" width="320" height="180">
       </div>
       <div class="card-stacked">
         <div class="card-content">
@@ -170,7 +170,7 @@
       </div>
     </div>
 	
-	
+  </div> <!-- tanquem div col -->
 
 		<!-- Menu Toggle Script -->
 		<script>
