--- a/dark_souls_ii.html
+++ b/dark_souls_ii.html
@@ -87,7 +87,7 @@
         <img src="http://demonssouls.wikidot.com/local--files/nexus/nexus.jpg" width="320" height="180">
       </div>
       <div class="card-stacked">
-        <div class="card-content red">
+        <div class="card-content">
           <p>El Nexo es un templo oculto que esta "unido a la tierra del norte de Boletaria".
 	     <br>
 	     Atrapa las almas de los futuros cazadores de demonios de modo que no pueden escapar,
