--- a/dark_souls.html
+++ b/dark_souls.html
@@ -105,13 +105,13 @@
       </ul>
     </div>
     <div id="test1" class="col s12">
-	<a>Dagger</a>
+	<a>Dagas</a>
 	<br>
-	<a>Paring Dagger</a>
+	<a>Espadas Rectas</a>
 	<br>
-	<a>Daga Secreta</a>
+	<a>Espadas Curvas</a>
 	<br>
-	<a>Uña del bebé</a>
+	<a>Estoques</a>
 	  </div>
     <div id="test2" class="col s12">Test 2</div>
     <div id="test3" class="col s12">Test 3</div>
